--- a/index.html
+++ b/index.html
@@ -33,26 +33,20 @@
         </div>
     </section>
 
-   
-    <button type="button-formulir" onclick="toggleForm()">Buka Formulir Donasi atau Keanggotaan</button>
     <p></p>
-
-    
-
-    <footer>
-        <p>Bumi Hijau 2024</p>
-    </footer>
-
+    <button type="button" class="button-formulir" onclick="toggleForm()">Buka Formulir Donasi atau Keanggotaan</button>
+    <p></p>
+    <!-- Popup Form -->
     <!-- Popup Form -->
 <div id="popupForm" class="popup">
     <div class="popup-content">
-        <span class="close" onclick="toggleForm()">&times;</span>
+        <span class="close" onclick="closePopup()">&times;</span>
         <h2>Contact Form</h2>
         <form>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
+            <label for="contact-name">Name</label>
+            <input type="text" id="contact-name" name="name" required>
+            <label for="contact-email">Email</label>
+            <input type="email" id="contact-email" name="email" required>
             <label for="message">Message</label>
             <textarea id="message" name="message" required></textarea>
             <button type="submit">Submit</button>
@@ -60,24 +54,32 @@
     </div>
 </div>
 
-    <!-- Popup Form -->
-    <div id="popupForm" class="popup">
+    
+
+    <div id="donation-membership" class="popup">
         <div class="popup-content">
-            <span class="close" onclick="closePopup()">&times;</span>
-            <h2>Contact Form</h2>
+            <span class="close" onclick="toggleForm()">&times;</span>
+            <h2>Form Donasi atau Keanggotaan</h2>
             <form>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
+                <label for="donation-amount">Jumlah Donasi</label>
+                <input type="text" id="donation-amount" name="donation-amount" required>
+                <label for="membership-type">Gabung Keanggotaan</label>
+                <select id="membership-type" name="membership-type" required>
+                    <option value="reguler">Daftar Anggota</option>
+                    <option value="premium">Tanpa Menjadi Anggota</option>
+                </select>
+                <label for="donation-name">Nama</label>
+                <input type="text" id="donation-name" name="name" required>
+                <label for="donation-email">Email</label>
+                <input type="email" id="donation-email" name="email" required>
                 <button type="submit">Submit</button>
             </form>
         </div>
     </div>
 
-   
+    <footer>
+        <p>Bumi Hijau 2024</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
